Many subclasses of WebCore::RTCStatsReport::Stats fail to initialize timestamp field
https://bugs.webkit.org/show_bug.cgi?id=274976
Summary Many subclasses of WebCore::RTCStatsReport::Stats fail to initialize timestam...
David Kilzer (:ddkilzer)
Reported 2024-05-31 11:11:32 PDT
Many subclasses of WebCore::RTCStatsReport::Stats fail to initialize timestamp field. Regressed in: [WebRTC] Support modern RTCStatsReport https://bugs.webkit.org/show_bug.cgi?id=166916 <rdar://problem/30293780> <https://commits.webkit.org/185940@main>
Attachments
Radar WebKit Bug Importer
Comment 1 2024-05-31 11:11:56 PDT
David Kilzer (:ddkilzer)
Comment 2 2024-05-31 11:15:19 PDT
Note You need to log in before you can comment on or make changes to this bug.