Cherry-pick 279660@main (44d522f49fae). https://bugs.webkit.org/show_bug.cgi?id=274976

Many subclasses of WebCore::RTCStatsReport::Stats fail to initialize timestamp field
    <https://bugs.webkit.org/show_bug.cgi?id=274976>
    <rdar://129071458>

    Reviewed by Youenn Fablet.

    * Source/WebCore/Modules/mediastream/RTCStatsReport.h:
    (WebCore::RTCStatsReport::Stats::timestamp):
    - Add default initializer.

    Canonical link: https://commits.webkit.org/279660@main

Canonical link: https://commits.webkit.org/274313.298@webkitglib/2.44